fixed the images-grid stretching on small devices

--- a/css/smallscreens.css
+++ b/css/smallscreens.css
@@ -19,6 +19,22 @@ nav .fas{
     }*/
 }
 
+@media only screen and (max-width: 600px){
+    .grid-container{
+        display: block;
+        position: relative;
+        width: 100%;
+        padding-top: 80%;
+    }
+    #images-grid{
+        position:  absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+    }
+}
+
 @media only screen and (max-width: 750px){
     .header-grid{
         margin-top: 0;
